# espacenet-mcp

./: ATTORNEY_GUIDE.md  QUICKSTART.md  README.md  publish_to_github.sh  pyproject.toml  requirements.txt  server.py  setup.sh  test_search_handlers.py  test_server.py  xml_parser.py
